--- a/src/main/webapp/hello.xhtml
+++ b/src/main/webapp/hello.xhtml
@@ -1,18 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" 
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
 "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml"
-      xmlns:f="http://java.sun.com/jsf/core"      
+      xmlns:f="http://java.sun.com/jsf/core"
       xmlns:h="http://java.sun.com/jsf/html">
-	
-    <h:head>
-        <title>JSF 2.0 Hello World</title>
-    </h:head>
-    <h:body>
-    	<h3>JSF 2.0 Hello World Example - hello.xhtml</h3>
-    	<h:form>
-    		<h:inputText value="#{helloBean.name}"></h:inputText>
-    		<h:commandButton value="Welcome Me" action="welcome"></h:commandButton>
-    	</h:form>
-	</h:body>
+
+<h:head>
+ <title>JSF 2.0 Hello World</title>
+</h:head>
+<h:body>
+ <h3>JSF 2.0 Hello World Example - hello.xhtml</h3>
+ <h4 style="color:brown">Try logging in</h4>
+ as <em>darkhelmet</em> with password <em>badguy</em><br/>
+ See the full users list in <em>shiro.ini</em> file
+ <p>
+ <h:link value="jump to Shiro tag test page" outcome="pri/shiro"/></p>
+
+ <h4 style="color:darkgreen">Try HelloBean instead</h4>
+ <h:form>
+  <h:inputText value="#{helloBean.name}"></h:inputText>
+  <h:commandButton value="Welcome Me" action="welcome"></h:commandButton>
+ </h:form>
+</h:body>
 </html>
